inserindo imagens e finalizando

--- a/index.html
+++ b/index.html
@@ -1,11 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilo/style.css">
+
     <title>Projeto X-MEN</title>
+
+    <link rel="stylesheet" href="estilo/style.css">
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oxanium:wght@300;400;700&display=swap" rel="stylesheet">
+
 </head>
+
 <body>
     <header class="cabecalho"></header>
 
@@ -14,10 +23,11 @@
         <section class="personagens">
             <h1 class="titulo"> Selecione um personagem</h1>
             <ul class="lista-de-personagens">
+
                 <li class="personagem" id="ciclope">
                     <img src="imagens/card-ciclope.jpg" alt="Personagem Ciclope">
                 </li>
-                    
+
                 <li class="Personagem" id="jean">
                     <img src="imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
                 </li>
@@ -46,12 +56,70 @@
                     <img src="imagens/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
             </ul>
-            
+
         </section>
+
         <section class="personagem-selecionado">
 
+            <img class="personagem-grande" src="imagens/card-ciclope.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Ciclope</h2>
+                <p class="descricao-personagem" id="descricao-personagem">Ele tem o poder de disparar rajadas ópticas
+                    por um acidente que aconteceu com ele quando criança, mas não consegue controlá-los. </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-jean-grey.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Jean Grey</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-lince-negra.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Lince Negra</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-magneto.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Magneto</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-noturno.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Noturno</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-tempestade.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Tempestade</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-vampira.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Vampira</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
+
+            <img class="personagem-grande" src="imagens/card-wolverine.png" alt="Personagem selecionado">
+
+            <div class="informacoes-personagem">
+                <h2 class="nome-personagem" id="nome-personagem"> Wolverine</h2>
+                <p class="descricao-personagem" id="descricao-personagem"> </p>
+            </div>
         </section>
 
     </main>
 </body>
+
 </html>
