--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <title>Projeto X-MEN</title>
 
-    <link rel="stylesheet" href="estilo/style.css">
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/estilos.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -16,48 +17,44 @@
 </head>
 
 <body>
-    <header class="cabecalho"></header>
+    <header class="cabecalho">
+        <img class="logo" src="imagens/logo.svg" alt="logo x-men">
+    </header>
 
     <main class="selecao-de-personagens">
 
+      
         <section class="personagens">
             <h1 class="titulo"> Selecione um personagem</h1>
             <ul class="lista-de-personagens">
-
                 <li class="personagem" id="ciclope">
-                    <img src="imagens/card-ciclope.jpg" alt="Personagem Ciclope">
+                        <img src="imagens/card-ciclope.jpg" alt="Personagem Ciclope">
                 </li>
-
                 <li class="Personagem" id="jean">
-                    <img src="imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
+                        <img src="imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
                 </li>
-
                 <li class="Personagem" id="lince">
-                    <img src="imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
+                        <img src="imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
                 </li>
-
                 <li class="Personagem" id="magneto">
-                    <img src="imagens/card-magneto.jpg" alt="Personagem Magneto">
+                        <img src="imagens/card-magneto.jpg" alt="Personagem Magneto">
                 </li>
-
                 <li class="Personagem" id="noturno">
-                    <img src="imagens/card-noturno.jpg" alt="Personagem Noturno">
+                        <img src="imagens/card-noturno.jpg" alt="Personagem Noturno">
                 </li>
-
                 <li class="Personagem" id="tempestade">
-                    <img src="imagens/card-tempestade.jpg" alt="Personagem Tempestade">
+                        <img src="imagens/card-tempestade.jpg" alt="Personagem Tempestade">
                 </li>
-
                 <li class="Personagem" id="vapira">
-                    <img src="imagens/card-vampira.jpg" alt="Personagem Vampira">
+                        <img src="imagens/card-vampira.jpg" alt="Personagem Vampira">
                 </li>
-
                 <li class="Personagem" id="wolverine">
-                    <img src="imagens/card-wolverine.jpg" alt="Personagem Wolverine">
+                        <img src="imagens/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
             </ul>
-
         </section>
+
+       
 
         <section class="personagem-selecionado">
 
