Atualização do css e responsividade

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/estilos.css">
+    <link rel="stylesheet" href="css/responsivo.css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,28 +27,28 @@
         <section class="personagens">
             <h1 class="titulo"> Selecione um personagem</h1>
             <ul class="lista-de-personagens">
-                <li class="personagem" id="ciclope">
+                <li class="personagem selecionado" id="ciclope">
                         <img src="imagens/card-ciclope.jpg" alt="Personagem Ciclope">
                 </li>
-                <li class="Personagem" id="jean">
+                <li class="personagem" id="jean">
                         <img src="imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
                 </li>
-                <li class="Personagem" id="lince">
+                <li class="personagem" id="lince">
                         <img src="imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
                 </li>
-                <li class="Personagem" id="magneto">
+                <li class="personagem" id="magneto">
                         <img src="imagens/card-magneto.jpg" alt="Personagem Magneto">
                 </li>
-                <li class="Personagem" id="noturno">
+                <li class="personagem" id="noturno">
                         <img src="imagens/card-noturno.jpg" alt="Personagem Noturno">
                 </li>
-                <li class="Personagem" id="tempestade">
+                <li class="personagem" id="tempestade">
                         <img src="imagens/card-tempestade.jpg" alt="Personagem Tempestade">
                 </li>
-                <li class="Personagem" id="vapira">
+                <li class="personagem" id="vapira">
                         <img src="imagens/card-vampira.jpg" alt="Personagem Vampira">
                 </li>
-                <li class="Personagem" id="wolverine">
+                <li class="personagem" id="wolverine">
                         <img src="imagens/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
             </ul>
@@ -63,54 +64,7 @@
                     por um acidente que aconteceu com ele quando criança, mas não consegue controlá-los. </p>
             </div>
 
-            <img class="personagem-grande" src="imagens/card-jean-grey.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Jean Grey</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
-
-            <img class="personagem-grande" src="imagens/card-lince-negra.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Lince Negra</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
-
-            <img class="personagem-grande" src="imagens/card-magneto.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Magneto</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
-
-            <img class="personagem-grande" src="imagens/card-noturno.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Noturno</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
-
-            <img class="personagem-grande" src="imagens/card-tempestade.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Tempestade</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
-
-            <img class="personagem-grande" src="imagens/card-vampira.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Vampira</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
-
-            <img class="personagem-grande" src="imagens/card-wolverine.png" alt="Personagem selecionado">
-
-            <div class="informacoes-personagem">
-                <h2 class="nome-personagem" id="nome-personagem"> Wolverine</h2>
-                <p class="descricao-personagem" id="descricao-personagem"> </p>
-            </div>
+           
         </section>
 
     </main>
