--- a/index.html
+++ b/index.html
@@ -27,28 +27,29 @@
         <section class="personagens">
             <h1 class="titulo"> Selecione um personagem</h1>
             <ul class="lista-de-personagens">
-                <li class="personagem selecionado" id="ciclope">
+                <li class="personagem selecionado" id="ciclope" data-name="Ciclope" data-description="Ele tem o poder de disparar rajadas ópticas
+                por um acidente que aconteceu com ele quando criança, mas não consegue controlá-los.">
                         <img src="imagens/card-ciclope.jpg" alt="Personagem Ciclope">
                 </li>
-                <li class="personagem" id="jean">
+                <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="@">
                         <img src="imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
                 </li>
-                <li class="personagem" id="lince">
+                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="@">
                         <img src="imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
                 </li>
-                <li class="personagem" id="magneto">
+                <li class="personagem" id="magneto" data-name="Magneto" data-description="@">
                         <img src="imagens/card-magneto.jpg" alt="Personagem Magneto">
                 </li>
-                <li class="personagem" id="noturno">
+                <li class="personagem" id="noturno" data-name="Noturno" data-description="@">
                         <img src="imagens/card-noturno.jpg" alt="Personagem Noturno">
                 </li>
-                <li class="personagem" id="tempestade">
+                <li class="personagem" id="tempestade" data-name="Tempestade" data-description="@">
                         <img src="imagens/card-tempestade.jpg" alt="Personagem Tempestade">
                 </li>
-                <li class="personagem" id="vapira">
+                <li class="personagem" id="vampira" data-name="Vampira" data-description="@">
                         <img src="imagens/card-vampira.jpg" alt="Personagem Vampira">
                 </li>
-                <li class="personagem" id="wolverine">
+                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="@">
                         <img src="imagens/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
             </ul>
@@ -66,6 +67,7 @@
         </section>
 
     </main>
+    <script src="js/index.js"></script>
 </body>
 
 </html>
