--- a/index.html
+++ b/index.html
@@ -31,25 +31,25 @@
                 por um acidente que aconteceu com ele quando criança, mas não consegue controlá-los.">
                         <img src="imagens/card-ciclope.jpg" alt="Personagem Ciclope">
                 </li>
-                <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="@">
+                <li class="personagem" id="jean-grey" data-name="Jean Grey" data-description="É uma mutante nível ômega e o principal avatar da Força Fênix, no qual manifesta poderes cósmicos. A telepatia e telecinese">
                         <img src="imagens/card-jean-grey.jpg" alt="Personagem Jean Grey">
                 </li>
-                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="@">
+                <li class="personagem" id="lince-negra" data-name="Lince Negra" data-description="Ela tem o poder de atravessar matéria sólida,campos de energia,rajadas ópticas, continuando intacta,e também tem o poder de andar no ar">
                         <img src="imagens/card-lince-negra.jpg" alt="Personagem Lince Negra">
                 </li>
-                <li class="personagem" id="magneto" data-name="Magneto" data-description="@">
+                <li class="personagem" id="magneto" data-name="Magneto" data-description="Ele tem o poder de magnetocinese, ou seja, controlar objetos de metal e criar campos magnéticos">
                         <img src="imagens/card-magneto.jpg" alt="Personagem Magneto">
                 </li>
-                <li class="personagem" id="noturno" data-name="Noturno" data-description="@">
+                <li class="personagem" id="noturno" data-name="Noturno" data-description="Ele é um mutante que nasceu com cauda, orelhas pontudas e com o poder de se Teletransportar">
                         <img src="imagens/card-noturno.jpg" alt="Personagem Noturno">
                 </li>
-                <li class="personagem" id="tempestade" data-name="Tempestade" data-description="@">
+                <li class="personagem" id="tempestade" data-name="Tempestade" data-description="Tem o poder de controlar as forças da natureza, muito poderosa ela pode produzir raios, chuvas, gelos, ventos, neblina, entre outros efeitos">
                         <img src="imagens/card-tempestade.jpg" alt="Personagem Tempestade">
                 </li>
-                <li class="personagem" id="vampira" data-name="Vampira" data-description="@">
+                <li class="personagem" id="vampira" data-name="Vampira" data-description="Ela tem o poder de absorver a vitalidade e memória das pessoas que toca ou no caso dos mutantes os poderes e a memória, mas só temporariamente">
                         <img src="imagens/card-vampira.jpg" alt="Personagem Vampira">
                 </li>
-                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="@">
+                <li class="personagem" id="wolverine" data-name="Wolverine" data-description="Poderes. Garras Metálicas. Fator de Cura Regenerativo, Super Agilidade.">
                         <img src="imagens/card-wolverine.jpg" alt="Personagem Wolverine">
                 </li>
             </ul>
